HDL ANT Deployment Package/retrieveUnpackaged/objects/Order_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summaries</relationshipLabel>
        <relationshipName>Order_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Orders__c</fullName>
        <label>Number of Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Order Summaries</relationshipLabel>
        <relationshipName>Order_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Summary</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Order Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>